[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://fonts/scope_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://sounds/one_step.wav" type="AudioStream" id=3]
[ext_resource path="res://SkyCube.tscn" type="PackedScene" id=4]
[ext_resource path="res://Inventory.tscn" type="PackedScene" id=5]
[ext_resource path="res://CameraShakingTimer.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape" id=1]

radius = 0.3
height = 1.38
_sections_unfolded = [ "Resource" ]

[node name="Player" type="KinematicBody"]

input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 5
collision_mask = 5
axis_lock_linear_x = false
axis_lock_linear_y = false
axis_lock_linear_z = false
axis_lock_angular_x = false
axis_lock_angular_y = false
axis_lock_angular_z = false
collision/safe_margin = 0.001
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
MOUSE_SENSITIVITY = 0.3
SPEED = 3.0
active = true

[node name="Scope" type="Label" parent="." index="0"]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.5
margin_top = -17.5
margin_right = 8.5
margin_bottom = 17.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
text = "+"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_fonts" ]

[node name="Label" type="Label" parent="Scope" index="0"]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.5
margin_top = -17.5
margin_right = 25.5
margin_bottom = 17.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
text = "[ ]"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="CollisionShape" type="CollisionShape" parent="." index="1"]

transform = Transform( 1, -7.10543e-15, -3.01876e-11, -3.01876e-11, -0.000345306, -1, -7.10543e-15, 1, -0.000345306, 0, 0.89, 0 )
shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="Camera" type="Camera" parent="." index="2"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.65, 0 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 84.9
size = 1.0
near = 0.05
far = 200.0
_sections_unfolded = [ "Transform" ]

[node name="RayCast" type="RayCast" parent="Camera" index="0"]

enabled = true
exclude_parent = true
cast_to = Vector3( 0, 0, -1.2 )
collision_mask = 2
_sections_unfolded = [ "Pause", "Transform", "Visibility" ]

[node name="RightStepSound" type="AudioStreamPlayer3D" parent="Camera" index="1"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, -1.65, 0 )
stream = ExtResource( 3 )
attenuation_model = 0
unit_db = -10.0
unit_size = 1.0
max_db = 3.0
pitch_scale = 1.0
autoplay = false
max_distance = 0.0
out_of_range_mode = 0
bus = "Effects"
area_mask = 1
emission_angle_enabled = false
emission_angle_degrees = 45.0
emission_angle_filter_attenuation_db = -12.0
attenuation_filter_cutoff_hz = 5000.0
attenuation_filter_db = -24.0
doppler_tracking = 0
_sections_unfolded = [ "Transform" ]

[node name="LeftStepSound" type="AudioStreamPlayer3D" parent="Camera" index="2"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.1, -1.65, 0 )
stream = ExtResource( 3 )
attenuation_model = 0
unit_db = -10.0
unit_size = 1.0
max_db = 3.0
pitch_scale = 1.0
autoplay = false
max_distance = 0.0
out_of_range_mode = 0
bus = "Effects"
area_mask = 1
emission_angle_enabled = false
emission_angle_degrees = 45.0
emission_angle_filter_attenuation_db = -12.0
attenuation_filter_cutoff_hz = 5000.0
attenuation_filter_db = -24.0
doppler_tracking = 0
_sections_unfolded = [ "Transform" ]

[node name="Tween" type="Tween" parent="." index="3"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0
_sections_unfolded = [ "playback" ]

[node name="StepsTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.35
one_shot = false
autostart = false

[node name="SkyCube" parent="." index="5" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.65, 0 )

[node name="Inventory" parent="." index="6" instance=ExtResource( 5 )]

[node name="CameraShakingTimer" parent="." index="7" instance=ExtResource( 6 )]

[node name="ShakingTimer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="timeout" from="StepsTimer" to="." method="_on_StepSoundTimer_timeout"]

[connection signal="timeout" from="ShakingTimer" to="." method="_on_ShakingTimer_timeout"]


